--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@
   animation-fill-mode: forwards;
 }
 
+.shake {
+  animation: shakeY;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+}
+
 @keyframes animate1 {
   0% {
     top: 20%;
